feature: доработка логики работы с токенами обновления и доработка миграций
